--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 docs/
 data/
+*.npy
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
