--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.6.0
-bleach==1.5.0
+bleach
 boto==2.48.0
 bs4==0.0.1
 bz2file==0.98
@@ -17,14 +17,14 @@ ftfy==4.4.3
 fuzzywuzzy==0.15.1
 gensim==3.1.0
 h5py==2.7.1
-html5lib==0.999999999
+html5lib
 idna==2.6
-Keras==2.1.2
+Keras
 lxml==3.7.3
 Markdown==2.6.9
-matplotlib==2.1.0
+matplotlib
 msgpack-numpy==0.4.1
-msgpack-python==0.4.8
+msgpack-python
 murmurhash==0.28.0
 networkx==2.0
 numpy==1.13.3
@@ -41,16 +41,14 @@ regex==2017.4.5
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
-six==1.11.0
 sklearn==0.0
 smart-open==1.5.3
 spacy==2.0.10
 termcolor==1.1.0
-thinc==6.10.1
+thinc
 toolz==0.8.2
 tqdm==4.19.4
 ujson==1.35
-urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.12.2
