--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 docs/
 data/
 *.npy
+*.iml
+*.xml
+*.pickle
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
