--- a/Dockerfile_gpu
+++ b/Dockerfile_gpu
@@ -1,43 +1,37 @@
-FROM tensorflow/tensorflow:latest-gpu-py3
+#FROM tensorflow/tensorflow:latest-gpu-py3
+#FROM nvidia/cuda
+FROM nvidia/cuda:9.0-cudnn7-devel
 MAINTAINER Andre Lamurias (alamurias@lasige.di.fc.ul.pt)
 WORKDIR /
 RUN apt-get update && apt-get install -y pandoc && apt-get autoclean -y
 RUN apt-get update && apt-get install -y git && apt-get autoclean -y
 RUN apt-get update && apt-get install -y wget && apt-get autoclean -y
+RUN apt-get update && apt-get install -y vim && apt-get autoclean -y
 RUN apt-get update && apt-get install -y default-jre && apt-get autoclean -y
-#RUN apt-get update && apt-get install -y python3=3.5.* python3-pip && apt-get autoclean -y
-#RUN alias python=python3
-
+RUN apt-get update && apt-get install -y python3 python3-pip python3-dev && apt-get autoclean -y
+RUN pip3 install --upgrade pip
+RUN alias python=python3
+RUN alias pip=pip3
 COPY ./requirements.txt ./
-RUN pip install -r requirements.txt
-#RUN pip install tensorflow-gpu==1.5.0
-RUN python -m spacy download en_core_web_sm
-
-RUN git clone https://github.com/AndreLamurias/obonet.git
-RUN cd obonet && python setup.py install
-
+RUN pip3 install -r requirements.txt --ignore-installed
+RUN pip install tensorflow-gpu
+RUN python3 -m spacy download en_core_web_sm
 
 RUN mkdir ./temp
-#RUN echo "deb http://http.debian.net/debian jessie-backports main" | \
-#      tee --append /etc/apt/sources.list.d/jessie-backports.list > /dev/null
-#RUN apt-get update && apt-get install -y -t jessie-backports openjdk-8-jdk
-#RUN update-java-alternatives -s java-1.8.0-openjdk-amd64
+
 #COPY evaluateDDI.jar ./
 RUN mkdir models
-COPY models/full_model.* models/
+#COPY models/full_model.* models/
 RUN mkdir data
-COPY data/chebi.obo data/
-COPY data/PubMed-w2v.bin data/
 COPY predict.sh predict.sh
 COPY train.sh train.sh
-
 
 RUN apt-get update && apt-get install -y zip && apt-get autoclean -y
 COPY ./sst-light-0.4 /sst-light-0.4
 RUN cd sst-light-0.4 && make
 ENV PATH="/sst-light-0.4:$PATH"
 
+RUN git clone https://github.com/AndreLamurias/obonet.git
+RUN cd obonet && echo "" > README.md &&  python3 setup.py install
 
-COPY src/ src/
-COPY data/DDICorpus/Test/DDIExtraction/All/ /ddicorpus_test/
 
