--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ pyparsing==2.2.0
 python-dateutil==2.6.1
 python-Levenshtein==0.12.0
 pytz==2017.3
-PyYAML==3.12
+pyyaml>=4.2b1
 rdflib
 regex==2017.4.5
 requests==2.20.0
